# wamp-rs

./: Cargo.toml  LICENSE  README.md  build.rs  config.json
examples/: api_user.rs  endpoint.rs  main.rs  pubsubclient.rs  router.rs
src/: client.rs  lib.rs  main.rs  main.rs.in  messages.rs  router.rs  utils.rs
src/messages/: mod.rs  mod.rs.in  types.rs  types.rs.in
src/messages/types/: error.rs  mod.rs  mod.rs.in  options.rs  roles.rs  value.rs
src/router/: handshake.rs  messaging.rs  mod.rs  patterns.rs  pubsub.rs  rpc.rs
src/router/pubsub/: mod.rs  patterns.rs
src/router/rpc/: mod.rs  patterns.rs
