[package]
name = "wamp"
version = "0.2.0"
authors = ["Daniel Yule <yule@cs.dal.ca>"]
license = "MIT"
homepage = "https://github.com/dyule/wamp-rs"
repository = "https://github.com/dyule/wamp-rs"
description = "A WAMP client and router implenting the basic WAMP profile"
keywords = ["rpc", "pubsub", "wamp"]

[lib]
name = "wamp"
path = "src/lib.rs"


[dependencies]
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
url = "1.4"
log = "0.3"
env_logger = "0.3"
rmp = "0.8"
rmp-serde = "0.12"
rand = "0.3"
eventual = "0.1.7"

[dependencies.ws]
version = "0.7"
features = ["ssl"]
