[package]
name = "wamp"
version = "0.1.0"
authors = ["Daniel Yule <yule@cs.dal.ca>"]
license = "MIT"
homepage = "https://github.com/dyule/wamp-rs"
repository = "https://github.com/dyule/wamp-rs"
description = "A WAMP client and router implenting the basic WAMP profile"
keywords = ["rpc", "pubsub", "wamp"]

[lib]
name = "wamp"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "1.7"
log = "0.4"
ws = "0.7"
rmp = "0.8"
rmp-serde = "0.13"
rand = "0.5.0-pre.1"
eventual = "0.1.7"
itertools = "0.7"


[dev-dependencies]
env_logger = "0.5"

[features]
default-features = []
ssl = ["ws/ssl"]
